# slack-mcp

./: .gitignore  CLAUDE.md  README.md  SPEC-slack-mcp_1.md  pyproject.toml
.github/workflows/: ci.yml  claude.yml
docs/plans/: 2026-03-18-implementation-design.md  2026-03-18-slack-mcp-implementation.md
src/slack_mcp/: auth.py  client.py  server.py  setup.py
src/slack_mcp/tools/: channels.py  messages.py  search.py  users.py
tests/integration/: test_smoke.py
tests/unit/: test_auth.py  test_client.py  test_setup.py
tests/unit/tools/: test_channels.py  test_messages.py  test_search.py  test_users.py
